# panther

./: .gitattributes  .gitignore  .gitmodules  Explanation_structure.pptx  MyClampedUniformSpline.m  Readme.md  example_with_polynomials.m  getSimpsonCoeff.m  getVertexesMovingObstacle.m  install_and_compile.sh  main.m  minimal_example.m  multquat.m  my_function.casadi  old_Readme.md  qabcFromAccel.m  solver.cpp  toRotMat.m  untitled2.m  untitled2.m~  untitled3.m
mader/: .gitignore  CMakeLists.txt  package.xml
mader/include/: bspline_utils.hpp  cgal_utils.hpp  mader.hpp  mader_ros.hpp  mader_types.hpp  octopus_search.hpp  solver_ipopt.hpp  solver_params.hpp  timer.hpp  tracker_predictor.hpp  utils.hpp
mader/launch/: hw.launch  mader.launch  mader_general.launch  mader_specific.launch  mader_specific_and_general.launch  novale.launch  perfect_tracker_and_sim.launch  single_agent_simulation.launch  start_world.launch  test_tracker_predictor.launch  tracker_predictor.launch
mader/matlab/: MyClampedUniformSpline.m  MyClampedUniformSplinePar.m  main.m  main_only_yaw.m  minimum_time.m  params_casadi.yaml  params_casadi_prediction.yaml  parker.m  prediction.m  prediction_one_segment.m  test_shift_poly.m  trying_probability.m
mader/matlab/more_utils/: convertMX2Matlab.m  getCoeffPolyCasadi.m  getSimpsonCoeff.m  sym2casadi.m
mader/meshes/: box.urdf  empty.world
mader/obstacles/: Readme.md  SQ01s.yaml  SQ02s.yaml  SQ03s.yaml  SQ04s.yaml  generate_traj_params.py  obstacle.launch  obstacle.py  obstacles.launch
mader/other/: predictor.hpp  squircle_cone.nb  tests_derivatives_numerically.m
mader/other/bechmark_linear_solvers/: ma57.txt  ma77.txt  ma97.txt  mumps.txt  readme.txt  untitled.m
mader/param/: mader.yaml  predictor.yaml
mader/rviz_cfgs/: mader.rviz
mader/scripts/: commands.py  dynamic_corridor.py  dynamic_forest.py  mader_commands.py  perfect_tracker.py  publish_in_gazebo.py
mader/src/: bspline_utils.cpp  cgal_utils.cpp  disable_physics.cpp  disable_physics_kinetic.cpp  mader.cpp  mader_ros.cpp  octopus_search.cpp  solver_ipopt.cpp  solver_ipopt_guess.cpp  solver_ipopt_utils.cpp  todos.txt  tracker_predictor.cpp  tracker_predictor_node.cpp  untitled.cpp  utils.cpp  yaw_guess_generator.cpp
mader/src/examples/: test_gurobi.cpp  test_nlopt.cpp  test_octopus_search.cpp  test_tracker_predictor.cpp  test_utils.cpp
mader_gazebo/: CMakeLists.txt  package.xml
mader_gazebo/launch/: sim222.launch  spawn_obstacle.launch  spawn_quadrotor.launch  spawn_quadrotor_with_asus.launch  spawn_quadrotor_with_laser.launch  start_world.launch
mader_gazebo/meshes/quadrotor/: quadrotor_base_2.dae  quadrotor_base_2.stl
mader_gazebo/urdf/: asus_camera.urdf.xacro  quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_with_asus.gazebo.xacro  quadrotor_with_asus.urdf.xacro
minimal_example/: CMakeLists.txt  casadi_demo  casadi_demo.cpp  casadi_demo.m
panther/: .gitignore  CMakeLists.txt  package.xml
panther/include/: bspline_utils.hpp  cgal_utils.hpp  octopus_search.hpp  panther.hpp  panther_ros.hpp  panther_types.hpp  solver_ipopt.hpp  timer.hpp  tracker_predictor.hpp  utils.hpp
panther/launch/: hw.launch  many_drones.launch  novale.launch  octopus_search.launch  panther.launch  panther_general.launch  panther_specific.launch  panther_specific_and_general.launch  perfect_tracker_and_sim.launch  simulation.launch  single_agent_simulation.launch  start_world.launch  static_transforms.launch  test_tracker_predictor.launch  tracker_predictor.launch
panther/matlab/: MyClampedUniformSpline.m  analysis.m  fit_to_angular_data.m  getVertexesMovingObstacle.m  main.m  novale_tests.m  params_casadi.yaml  plot_closed_form_yaw_fixed_spatial_path.m  prediction.m  prediction_old.m  qabcFromAccel.m  scaling.lyx  scaling.m  shiftToEnsureNoMoreThan2Pi.m  untitled2.m  untitled7.m  using_fitting_manifolds.m
panther/matlab/casadi_generated_files/: fit_yaw.casadi  get_mean_variance_pred_10.casadi  get_mean_variance_pred_11.casadi  get_mean_variance_pred_12.casadi  get_mean_variance_pred_13.casadi  get_mean_variance_pred_14.casadi  get_mean_variance_pred_15.casadi  get_mean_variance_pred_16.casadi  get_mean_variance_pred_17.casadi  get_mean_variance_pred_18.casadi  get_mean_variance_pred_19.casadi  get_mean_variance_pred_20.casadi  get_mean_variance_pred_21.casadi  get_mean_variance_pred_22.casadi  get_mean_variance_pred_23.casadi  get_mean_variance_pred_24.casadi  get_mean_variance_pred_25.casadi  get_mean_variance_pred_26.casadi  get_mean_variance_pred_27.casadi  get_mean_variance_pred_28.casadi  get_mean_variance_pred_29.casadi  get_mean_variance_pred_30.casadi  get_mean_variance_pred_31.casadi  get_mean_variance_pred_32.casadi  get_mean_variance_pred_33.casadi  get_mean_variance_pred_34.casadi  get_mean_variance_pred_35.casadi  get_mean_variance_pred_36.casadi  (+25 more)
panther/meshes/: empty.world
panther/other/: Explanation_structure.pptx  fit_angular_plot.nb  generate_traj.m  newfile1.lyx  predictor.cpp  predictor.hpp  test_predictor.launch
panther/param/: panther.yaml  predictor.yaml
panther/rviz_cfgs/: panther.rviz  panther_old.rviz
panther/scripts/: dynamic_corridor.py  dynamic_forest.py  get_stats_from_bag.py  hkust_analyze.sh  launch_many_drones.py  noPA_analyze.sh  panther_analyze.sh  perfect_controller.py  perfect_tracker.py  publish_goals.py  publish_in_gazebo.py  py_analyze.sh  run_complexity_sims.py  run_many_sims.py  run_many_sims_single_agent.py  table.lyx  ysweep.sh
panther/src/: NOVALE.cpp  bspline_utils.cpp  cgal_utils.cpp  disable_physics.cpp  disable_physics_melodic.cpp  move_model.cpp  move_model_kinetic.cpp  move_model_melodic.cpp  octopus_search.cpp  panther.cpp  panther_node.cpp  panther_ros.cpp  solver_ipopt.cpp  solver_ipopt_guess.cpp  solver_ipopt_utils.cpp  todos.txt  tracker_predictor.cpp  tracker_predictor_node.cpp  untitled.cpp  utils.cpp  yaw_guess_generator.cpp
trying_boost/: CMakeLists.txt  cities.cpp  novale.cpp  novale2.cpp  tests_splines.cpp
trying_boost/matlab_example_code_gen/: untitled3.m  untitled3.prj
utils/: getT.m  (+17 more)
(+120 files in other folders)
