<?xml version="1.0"?>
<package>
  <name>panther</name>
  <version>0.0.0</version>
  <description>The panther package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jtorde@mit.edu">Jesus Tordesillas Torres</maintainer>
  <author email="jtorde@mit.edu">Jesus Tordesillas Torres</author> 

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
   <!--
  <build_depend>rospy</build_depend>
   -->

  <build_depend>snapstack_msgs</build_depend>
  <build_depend>panther_msgs</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>decomp_util</build_depend>
  <build_depend>decomp_ros_utils</build_depend>
  <build_depend>separator</build_depend>  
  <!--<build_depend>jsk_rviz_plugins</build_depend> -->
  <build_depend>hungarian</build_depend> 

  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
 <!--
  <build_depend>decomp_util</build_depend>
  <build_depend>decomp_ros_utils</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
